<resources>
    <string name="app_name">math quiz games</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="tap_play_add">Tap play Add</string>
    <string name="tap_to_subtract">Tap to Subtract</string>
    <string name="play_a_random_game">Play a Random Game</string>
    <string name="game_result">Game Result</string>
    <string name="play">Play</string>
    <string name="points">Points</string>
    <string name="zero">0</string>
    <string name="wrong">Wrong</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">sign Up</string>
</resources>