<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.GameResultFragment">

    <TextView
        android:id="@+id/text"
        android:layout_centerVertical="true"
        android:text="@string/game_result"
        android:textColor="@color/purple_500"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/Result"
        android:layout_below="@id/text"
        android:text="@string/game_result"
        android:textColor="@color/purple_500"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textPoint"
        android:layout_alignParentStart="true"
        android:layout_below="@id/Result"
        android:text="@string/points"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/Point"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/Result"
        android:text="@string/zero"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textWrong"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textPoint"
        android:text="@string/wrong"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/Wrong"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/Point"
        android:text="@string/zero"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button"
        android:layout_below="@id/Wrong"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:text="@string/play" />

</RelativeLayout>