<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:id="@+id/nav_host_fragment"
    android:layout_height="match_parent"
    tools:context=".Fragment.offline_modeFragment">


    <ImageButton
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:id="@+id/AddBtu"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:scaleType="fitXY"
        android:src="@drawable/addicon"
        android:contentDescription="@string/tap_play_add" />
    <ImageButton
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:id="@+id/subtract"
        android:layout_alignParentEnd="true"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:scaleType="fitXY"

        android:src="@drawable/subtracticon"
        android:contentDescription="@string/tap_to_subtract" />

    <ImageButton
        android:id="@+id/divideBtu"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_below="@id/AddBtu"
        android:contentDescription="@string/tap_play_add"
        android:scaleType="fitXY"
        android:src="@drawable/divideicon" />
    <ImageButton
        android:id="@+id/MultiplyBtu"
        android:layout_alignParentEnd="true"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_below="@id/AddBtu"
        android:contentDescription="@string/tap_play_add"
        android:scaleType="fitXY"
        android:src="@drawable/multiplyicon" />
    <ImageButton
        android:id="@+id/underRootBtu"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_below="@id/divideBtu"
        android:contentDescription="@string/tap_play_add"
        android:scaleType="fitXY"
        android:src="@drawable/underrooticon" />
    <ImageButton
        android:id="@+id/percentageBtu"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/divideBtu"
        android:contentDescription="@string/tap_play_add"
        android:scaleType="fitXY"
        android:src="@drawable/percentageicon" />


    <Button
        android:text="@string/play_a_random_game"
        android:id="@+id/random"
        android:textSize="28sp"
        android:layout_below="@id/underRootBtu"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>